# tri-onyx

./: .csignore  .env.example  .formatter.exs  .gitignore  .gitleaks.toml  AGENTS.md  LICENSE  PUSH_RECIPE.md  README.md  TODO.md  agent.Dockerfile  comparison-table.md  connector.Dockerfile  docker-compose.docs.yml  docker-compose.yml  gateway.Dockerfile  mix.exs  mkdocs.yml  pyproject.toml  slack_app_manifest.json
.claude/: CLAUDE.md  settings.json
adr/: 001-information-is-the-threat.md  002-elixir-gateway.md  003-python-agent-runtime.md  004-go-fuse-driver.md  005-bandwidth-constrained-trust.md  006-gateway-credential-secrecy.md  007-biba-blp-violation-detection.md  008-risk-manifest-provenance.md  009-graph-analysis-transitive-risk.md  010-lethal-trifecta.md  ARCHITECTURE.md  SECURITY_MODEL.md
agent-definitions/: bookmarks.md  diary.md  news.md  social.md
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
connector/: pyproject.toml
connector/connector/: __init__.py  config.py  formatting.py  gateway_client.py  main.py  protocol.py  transcriber.py
connector/connector/adapters/: __init__.py  base.py  matrix.py  slack.py
connector/tests/: test_protocol.py
docs/: agent-runtime.md  api-reference.md  bcp-subscriptions.md  bcp.md  bctp.md  browser-sessions.md  comparison.md  decisions.md  e2e-testing.md  email-outlook-oauth2.md  email-setup.md  fuse-driver-spec.md  getting-started.md  index.md  matrix-guide.md  plugins.md  project-structure.md  protocol.md  secrets.md  service-setup.md  web-dashboard.md  webhook-receiver-design.md
fuse/: README.md  (+2 more)
(+181 files in other folders)
